# backend

./: .env.example  .gitignore  google.py  google_auth.py  main.py  pyproject.toml  requirements.txt
app/auth/: auth.py  dependencies.py
app/config/: db.py
app/queries/: dashboardquery.sql  users.sql
app/schemas/: authschema.py  cattlecardschema.py  cattleprofileschema.py  dashboardschema.py  donatedoutschema.py  genealogyschema.py  presentcattleschema.py
