[project]
name = "gaushalabackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
